external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_mut_usage_match.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/invalid_mut_usage_match.move:10:26
   │
10 │          Option::Other { mut x: mut y } => y,
   │                          ^^^ 'mut' modifier can only be used on variable bindings

